5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1643_1054.log
== TEST (2019-04-15 16:03:08) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x == 2x + y = 3):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- ERROR:
File "XXXX", line 3
    if (x == 2x + y = 3):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:03:38) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x == 2x + y = 3):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- ERROR:
File "XXXX", line 3
    if (x == 2x + y = 3):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:08:59) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x == 2x + y = 3):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- ERROR:
File "XXXX", line 3
    if (x == 2x + y = 3):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:25:59) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x == 2x + y = 3):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- ERROR:
File "XXXX", line 3
    if (x == 2x + y = 3):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:26:47) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
reta= ((2 * x) + y = 3)
if (x == reta):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- ERROR:
File "XXXX", line 3
    reta= ((2 * x) + y = 3)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:26:54) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
reta= ((2 * x) + y = 3)
if (x == reta):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- ERROR:
File "XXXX", line 3
    reta= ((2 * x) + y = 3)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:27:13) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
reta= ((2 * x) + y) = 3
if (x == reta):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- ERROR:
File "XXXX", line 3
    reta= ((2 * x) + y) = 3
         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:27:47) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x == ((2 * x) + y)):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- OUTPUT:
Ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:28:14) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x == ((2 * x) + y - 3)):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- OUTPUT:
Ponto nao pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:28:52) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x, y == ((2 * x) + y - 3)):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- OUTPUT:
Ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:29:00) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x, y == ((2 * x) + y - 3)):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- EXECUTION TIME:
0.15962
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
Ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
Ponto pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:29:08) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x, y == ((2 * x) + y - 3)):
   print ("Ponto pertence a reta")
else:
	print ("Ponto nao pertence a reta")
				

-- OUTPUT:
Ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:29:21) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x, y == ((2 * x) + y - 3)):
   print ("ponto pertence a reta")
else:
	print ("ponto nao pertence a reta")
				

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:29:33) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x, y == ((2 * x) + y - 3)):
   print ("ponto pertence a reta")
else:
	print ("ponto nao pertence a reta")
				

-- EXECUTION TIME:
0.179221
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:29:54) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x, y == (((2 * x) + y) = 3)):
   print ("ponto pertence a reta")
else:
	print ("ponto nao pertence a reta")
				

-- ERROR:
File "XXXX", line 3
    if (x, y == (((2 * x) + y) = 3)):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:30:03) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (x, y == (((2 * x) + y))):
   print ("ponto pertence a reta")
else:
	print ("ponto nao pertence a reta")
				

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:35:59) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
reta = ((2 * x) + y == 3)
if (x, y == reta):
   print ("ponto pertence a reta")
else:
	print ("ponto nao pertence a reta")
				

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:36:07) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
reta = ((2 * x) + y == 3)
if (x, y == reta):
   print ("ponto pertence a reta")
else:
	print ("ponto nao pertence a reta")
				

-- EXECUTION TIME:
0.167634
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto pertence a reta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:38:09) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (((2 * x) + y == 3)):
   print ("ponto pertence a reta")
else:
	print ("ponto nao pertence a reta")
				

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:38:17) 
-- CODE:
x= float(input("Coordenada x: "))
y= float(input("Coordenada y: "))
if (((2 * x) + y == 3)):
   print ("ponto pertence a reta")
else:
	print ("ponto nao pertence a reta")
				

-- EXECUTION TIME:
0.191754
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
